--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+@layer utilities {
+    .rich-text h2 {
+        @apply text-2xl font-bold mb-4; 
+    }
+}
