--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,59 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
 @layer utilities {
-    .rich-text h2 {
-        @apply text-2xl font-bold mb-4; 
-    }
+  .rich-text h2 {
+    @apply text-2xl font-bold mb-4;
+  }
+  .rich-text h3 {
+    @apply text-xl font-bold mb-4;
+  }
+
+  .rich-text h4 {
+    @apply text-lg font-bold mb-4;
+  }
+
+  .rich-text h5 {
+    @apply text-base font-bold mb-4;
+  }
+
+  .rich-text h6 {
+    @apply text-sm font-bold mb-4;
+  }
+
+  .rich-text p {
+    @apply mb-4;
+  }
+
+  .rich-text ul {
+    @apply list-disc list-inside mb-4;
+  }
+
+  .rich-text ol {
+    @apply list-decimal list-inside mb-4;
+  }
+
+  .rich-text li {
+    @apply mb-2;
+  }
+
+  .rich-text a {
+    @apply text-blue-500 underline;
+  }
+
+  .rich-text img {
+    @apply mb-4;
+  }
+
+  .rich-text blockquote {
+    @apply border-l-4 border-gray-300 pl-4 mb-4;
+  }
+
+  .rich-text blockquote p {
+    @apply italic;
+  }
+
+  .rich-text table {
+    @apply w-full border-collapse border border-gray-300 mb-4;
+  }
 }
